<resources>
    <string name="app_name">Ekram</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="add_post">Add Post</string>
    <string name="city_loft">City Loft</string>
    <string name="copenhagen_denmark">Copenhagen, Denmark</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_register">Don\'t have An Account ? Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="donation_type">Donation Type</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
</resources>